# insta-wizard

./: .gitignore  CONTRIBUTING.md  README.md  README.ru.md  pyproject.toml
.github/workflows/: tests.yml
dev/: commands.txt  gen_mobile_exports.py  gen_web_exports.py  imports.py  tools.py
examples/: logging_setup.py  proxy.py  proxy_rotation.py
examples/mobile/: 01_configure_device.py  02_configure_local_data.py  03_state_persistance.py  friendships.py  login_logout.py  media_publishing.py  registration_email.py  registration_sms.py  user_info.py  using_commands.py
examples/web/: 01_configure_device.py  02_configure_local_data.py  03_state_persistance.py  account_info.py  friendships.py  login_logout.py
src/insta_wizard/: __init__.py
src/insta_wizard/common/: exceptions.py  generators.py  help.py  interfaces.py  logger.py  media_utils.py  models.py  password_encrypter.py  utils.py
src/insta_wizard/common/entities/: __init__.py  account.py  base.py  comment.py  direct_thread.py  friendship.py  media.py  user.py
src/insta_wizard/common/models/: checkpoint.py  other.py  proxy.py
src/insta_wizard/common/transport/: aiohttp_transport.py  base.py  exceptions.py  models.py
src/insta_wizard/mobile/: __init__.py  client.py  exceptions.py  sync_client.py  sync_client.pyi
src/insta_wizard/mobile/commands/: __init__.py  fetch_rmd.py  rupload_igphoto.py  rupload_igvideo.py
src/insta_wizard/mobile/common/: command.py  command_factories.py  constants.py  headers_factory.py  mobile_requester.py  utils.py
src/insta_wizard/mobile/flows/: __init__.py  bloks_login.py  publish_album.py  publish_photo.py  publish_reel.py  publish_story_photo.py  publish_story_video.py  publish_video.py  register_account_email.py  register_account_sms.py  set_profile_picture.py
src/insta_wizard/mobile/models/: android_device_info.py  challenge.py  deps.py  local_data.py  state.py  version.py
src/insta_wizard/mobile/responses/: banyan.py  rupload_igphoto.py  zr_dual_tokens.py
src/insta_wizard/mobile/sections/: __init__.py  api.py  challenge.py  graphql_query.py  graphql_www.py  registration.py
src/insta_wizard/web/: __init__.py  client.py  exceptions.py  sync_client.py  sync_client.pyi
src/insta_wizard/web/commands/: __init__.py
src/insta_wizard/web/common/: command.py  command_factories.py  constants.py  headers_factory.py  requester.py  state_initializer.py  utils.py  web_navigator.py
src/insta_wizard/web/flows/: __init__.py  login.py
src/insta_wizard/web/models/: deps.py  device_info.py  local_data.py  other.py  state.py
src/insta_wizard/web/sections/: __init__.py  api.py  challenge.py  sections.py
tests/: help.py  imports.py
tests/unit/: conftest.py  test_client_state.py  test_generators.py  test_password_encrypter.py  test_proxy_info.py  test_transport_settings.py  test_utils.py
(+375 files in other folders)
