[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insta-wizard"
version = "0.1.1"
description = "Async Python client for Instagram private mobile and web API"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "5ou1e", email = "example@example.org" }]
keywords = [
    "instagram", "instagram-api", "instagram-client",
    "instagram api client", "instagram api", "instagram client",
    "instagram-private-api", "instagram-private",
    "instagram-web", "instagram-bot", "instagram-automation",
    "instagram-scraper", "instagram-scraper", "instagram-android",
    "async-client", "async-instagram",
    "ig-client", "ig-private",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: AsyncIO",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "yarl>=1.9.0,<2.0",
    "aiohttp>=3.13.3,<4.0",
    "backports.zstd>=1.2.0",
    "orjson>=3.9.0,<4.0",
    "mashumaro>=3.20,<4.0",
    "pytz>=2023.3",
    "Babel>=2.12.0,<3.0",
    "PyNaCl>=1.5.0,<2.0",
    "pycryptodomex>=3.15.0,<4.0",
    "pyparsing>=3.0.0,<4.0",
    "pydantic>=2.0,<3.0",
    "aiofiles",
    "rich",
]

[project.urls]
Homepage = "https://github.com/5ou1e/insta-wizard"
Repository = "https://github.com/5ou1e/insta-wizard"
"Bug Tracker" = "https://github.com/5ou1e/insta-wizard/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.10",
    "python-dotenv>=1.0,<2.0",
]


[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"insta_wizard" = ["py.typed"]


[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]
extend-exclude = ["dist", "build", ".venv"]

[tool.ruff.lint]
select = [
    "E", "F", # pyflakes/pycodestyle
    "I", # isort (imports)
    "UP", # pyupgrade
    "B", # bugbear
    "SIM", # simplify
]
ignore = [
    "E501", # line length
    "B904",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # re-export'ы в фасадах

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true
pretty = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"